--- a/react-app/src/scss/components/_header.scss
+++ b/react-app/src/scss/components/_header.scss
@@ -1,6 +1,7 @@
 .header {
   background: #24292E;
-  padding: 1rem;
+  padding: 0 1rem;
+  height: 4rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
